feat: add `git/repos`, `git/newRepo`, `newUser` APIs
- `git/newRepo` creates git repository in the device.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,14 @@
     ],
     "module": "commonjs",
     "moduleResolution": "node",
+    "paths": {
+      "@@src/*": [
+        "src/*" 
+      ],
+      "@@utils/*": [
+        "src/utils/*" 
+      ],
+    },
     "strictNullChecks": true,
     "target": "es6"
   },
