--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "nodegit": "^0.24.1"
+    "nodegit": "^0.24.1",
+    "simple-git": "^1.110.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
