feat: add `commits/` API
- Git module is created. Some git related methods are moved into this module.
- nodegit is removed.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "paths": {
+      "@@modules/*": [
+        "src/modules/*" 
+      ],
       "@@src/*": [
         "src/*" 
       ],
