--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "source ./internals/prestart.sh && node src/launch.js",
+    "start": ". ./internals/prestart.sh && node src/launch.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
