feat: add `users/` API
- `db` module is created.
- `apis/` is being refactored.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "paths": {
+      "@@apis/*": [
+        "src/apis/*" 
+      ],
       "@@modules/*": [
         "src/modules/*" 
       ],
